queryForObject에서 result.getFirst()->result.get(0)으로 수정